<?xml version="1.0"?>
<package format="2">
  <name>agilex_navigation</name>
  <version>0.0.0</version>
  <description>The agilex_navigation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="r.voronov@innopolis.university">Roman Voronov</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>move_base</build_depend>
  <build_depend>dwa_local_planner</build_depend>
  <build_depend>global_planner</build_depend>

  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>dwa_local_planner</build_export_depend>
  <build_export_depend>global_planner</build_export_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>global_planner</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>

  <export></export>
</package>
